# riscv-cpu

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
rtl/decode/: decode.sv
rtl/execute/: alu.sv  cmp.sv  common.sv  execute.sv
rtl/fetch/: bpu.sv  btb.sv  fetch.sv
rtl/toplev/: regfile.sv  toplev.sv
rtl/util/: crossbar.sv
rtl/writeback/: writeback.sv
tests/: Makefile
tests/execute/alu/: Makefile  alu_tests.py
tests/execute/cmp/: Makefile  cmp_tests.py
tests/execute/execute/: Makefile  execute_tests.py
tests/fetch/: Makefile  fetch_tests.py
tests/fetch/bpu/: Makefile  bpu_tests.py
tests/fetch/btb/: Makefile  btb_tests.py
tests/fetch/fetch/: Makefile  fetch_tests.py
tests/toplev/: Makefile  toplev_tests.cpp  toplev_tests.py
tests/toplev/regfile/: Makefile  regfile_tests.py
